fix: mobile accounts tab vertical resize incorrectly animated and horizontal animations not beginning off screen

--- a/client/src/customer/components/AccountsTab/Security/security.css
+++ b/client/src/customer/components/AccountsTab/Security/security.css
@@ -1,7 +1,7 @@
 .security {
     width: 100%;
     height: 100%;
-    transform: translateX(40vw);
+    transform: translateX(100%);
     transition: all 0.3s ease-in-out;
     position: absolute;
     top: 0;
