--- a/client/src/customer/components/AccountsTab/accounts-tab.css
+++ b/client/src/customer/components/AccountsTab/accounts-tab.css
@@ -11,7 +11,7 @@
     align-items: center;
     z-index: 105;
     transform: translateX(100vw);
-    transition: all 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
 }
 
 .customer-accounts div {
@@ -45,5 +45,6 @@
         min-width: 350px;
         max-width: 500px;
         transform: translateX(90vw);
+        box-shadow: 2px 2px 50px 50px rgba(0, 0, 0, 0.25);
     }
 }
